# Power-Plant-Energy-Output

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Power_Plant_Energy_Output.xlsx  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
